a11y: #4226 material nav prevent focus shift

--- a/src/themes/material/assets/mat.css
+++ b/src/themes/material/assets/mat.css
@@ -1180,3 +1180,7 @@ p + .btn-background {
       display: inline-block;
       white-space: normal;
   }
+
+  .nav-wrapper a:focus {
+    display: block;
+  }
